<레프트21> -> &lt;레프트21>

--- a/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
+++ b/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
@@ -45,7 +45,7 @@ tags:
 
 그래서 생기는 장점이 여러가지이지만, 그 중에도 과감한 출력 서비스를 별 고민없이 할 수 있다는 점은 장점 중에도 장점이라고 생각합니다. **&lt;레프트21>은 오로지 독자들이 기사를 더 꼼꼼히, 그리고 편하게 읽을 수 있으면 대만족**이니까요.
 
-그런만큼, 독자들의 후원이 정말 중요한 언론입니다 &lt;레프트21>은 말이죠. <레프트21>의 이런 정신에 감동하셨다면 지금 당장 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원 페이지로 이동</a>하셔서 후원 클릭하세요! ㅋㅋㅋ
+그런만큼, 독자들의 후원이 정말 중요한 언론입니다 &lt;레프트21>은 말이죠. &lt;레프트21>의 이런 정신에 감동하셨다면 지금 당장 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원 페이지로 이동</a>하셔서 후원 클릭하세요! ㅋㅋㅋ
 
 ## 구체적인 방법
 
