--- a/_posts/2009-09-18-문맥-관련기사의-출처정보.md
+++ b/_posts/2009-09-18-문맥-관련기사의-출처정보.md
@@ -23,11 +23,11 @@ tags:
 
 <img src="/wp-content/uploads/1/cfile23.uf.127CAB524D08471F4576A7.jpg" class="aligncenter" width="560" height="312" alt="레프트21 문맥 링크 출처 정보 예시" />
 
-위에 보시면 ‘민주노동당 등이 정권 퇴진까지 결의’라는 내용에 링크가 걸려 있죠. 그리고 자그만 팝업이 떴습니다. 팝업의 내용은 **‘김문성 객원기자, 민주노동당의 이명박 퇴진 요구 결정을 지지하며, <레프트21>8호, 2009-06-20’** 이네요.
+위에 보시면 ‘민주노동당 등이 정권 퇴진까지 결의’라는 내용에 링크가 걸려 있죠. 그리고 자그만 팝업이 떴습니다. 팝업의 내용은 **‘김문성 객원기자, 민주노동당의 이명박 퇴진 요구 결정을 지지하며, &lt;레프트21>8호, 2009-06-20’** 이네요.
 
 바로 저 기능입니다. 링크를 클릭하면 어떤 기사로 가게 되는지 알 수 있게 해 주는 기능인 것이죠.
 
-앞으로는 문맥에 달린 링크가 <레프트21> 기사인 경우에는 필자, 제목, 매체와 호수, 발행일 설명이 나올 것입니다.
+앞으로는 문맥에 달린 링크가 &lt;레프트21> 기사인 경우에는 필자, 제목, 매체와 호수, 발행일 설명이 나올 것입니다.
 
 제가 만든 관리자 기능은 dbLink라는 플러그인을 개조한 것인데요, 링크를 달 문장을 선택하고, 관련기사 달기 버튼을 누르면 제목을 입력하라는 게 나오도록 했죠. 거기에 관련기사 제목을 입력하면 되는 방식입니다.
 
