--- a/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
+++ b/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
@@ -11,7 +11,7 @@ tistory_id:
 categories:
   - 개발 이야기
 ---
-<레프트21>처럼 전혀 기업광고도, 정부지원도 받지 않는 신문은 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">독자 여러분의 후원</a>이 정말 중요합니다. 그런데, 얼마 전 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원페이지</a>를 보다가, 좀 불편해 보이는 점을 발견했습니다.
+&lt;레프트21>처럼 전혀 기업광고도, 정부지원도 받지 않는 신문은 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">독자 여러분의 후원</a>이 정말 중요합니다. 그런데, 얼마 전 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원페이지</a>를 보다가, 좀 불편해 보이는 점을 발견했습니다.
 
 <div class="imageblock center" style="text-align: center; clear: both;">
   <img src="/attach/3/cfile23.uf.1262AD4A4D0847211D8A3B.png" alt="사용자 삽입 이미지" height="415" width="500" />
