--- a/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
+++ b/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
@@ -31,7 +31,7 @@ tags:
 
 대표적인 예는 신문기사인데, 웹이 없는 상황에서였다면, 예전 기사를 보기 위해 도서관에 가서 예전 신문들을 뒤적거려야 했을 것이다. 웹에 기사들이 다 올라온 이후부터 상황이 바뀌었다. 신문 기사를 검색하는 것은 너무나 쉬워졌다.
 
-나는 <레프트21> 홈페이지를 기획하면서 이 점을 가장 중요한 과제로 보았다. 따라서 우리 홈페이지가 검색에 잘 노출될 수 있도록 신경쓰는 데 혼신의 힘을 기울였다.
+나는 &lt;레프트21> 홈페이지를 기획하면서 이 점을 가장 중요한 과제로 보았다. 따라서 우리 홈페이지가 검색에 잘 노출될 수 있도록 신경쓰는 데 혼신의 힘을 기울였다.
 
 그리고 지금, 창간부터 8개월이 지났다. 이번 1주일의 검색 유입량은 내 입을 벌어지게 만든다.
 
