--- a/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
+++ b/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
@@ -71,7 +71,7 @@ tags:
 
 이런 겁니다.
 
-<레프트21>을, 이명박의 공안 탄압이 무서워서 프록시로 접속하는 사람들이 있더라도(보통은 프록시로 접속하면 자바스크립트가 꺼집니다) 기본적으로는 이용할 수 있도록 해야 한다는 것이죠.
+&lt;레프트21>을, 이명박의 공안 탄압이 무서워서 프록시로 접속하는 사람들이 있더라도(보통은 프록시로 접속하면 자바스크립트가 꺼집니다) 기본적으로는 이용할 수 있도록 해야 한다는 것이죠.
 
 그런데 이번 변화와 ‘겸손한 자바스크립트’가 어떤 관계냐?
 
