--- a/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
+++ b/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
@@ -14,7 +14,7 @@ tags:
   - jQuery
   - 온라인 기사
 ---
-최근 <레프트21>에 매일 같이 올라가는 온라인 기사의 수가 늘어났죠.
+최근 &lt;레프트21>에 매일 같이 올라가는 온라인 기사의 수가 늘어났죠.
 
 최근 3주 간의 방문자 수 증가가 그것과 연관된 것인지 분석하기 위해서 각 호수별 온라인 기사의 개수, 날짜별로 올라온 온라인 기사의 개수 등을 분석하고 있었습니다.
 
@@ -28,7 +28,7 @@ tags:
 
 ## 왜 필요했나
 
-예컨대 <레프트21> 9호는 유난히 온라인 기사의 개수가 많습니다.
+예컨대 &lt;레프트21> 9호는 유난히 온라인 기사의 개수가 많습니다.
 
 이 때 어떤 일이 있었길래 이렇게 온라인 기사 개수가 많은지 파악하려면 단순 통계만 가지고는 안 되겠죠.
 
