--- a/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
+++ b/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
@@ -56,7 +56,7 @@ tags:
   
 
 
-‘꼭 <레프트21> 홈페이지가 아니더라도 우리 독자들이 웹과 웹브라우저의 다양한 기능을 잘 활용할 수 있게 된다면 좋겠다’
+‘꼭 &lt;레프트21> 홈페이지가 아니더라도 우리 독자들이 웹과 웹브라우저의 다양한 기능을 잘 활용할 수 있게 된다면 좋겠다’
 
 
   
@@ -140,7 +140,7 @@ tags:
   
 
 
-<a href="/webmaster/7" target="_blank" class="broken_link">일단 RSS를 소개한 글</a>인데요, 이건 단순히 <레프트21>을 위해서뿐 아니라 웹을 능숙하게 사용하는 데도 도움을 주는 정보였기 때문에 심혈을 기울여 썼습니다.
+<a href="/webmaster/7" target="_blank" class="broken_link">일단 RSS를 소개한 글</a>인데요, 이건 단순히 &lt;레프트21>을 위해서뿐 아니라 웹을 능숙하게 사용하는 데도 도움을 주는 정보였기 때문에 심혈을 기울여 썼습니다.
 
 
   
@@ -164,7 +164,7 @@ tags:
   
 
 
-이게 단순히 <레프트21>뿐 아니라 다른 분야에도 도움을 줬을 거라 생각하니까 심혈을 기울여서 쓴 것이죠.
+이게 단순히 &lt;레프트21>뿐 아니라 다른 분야에도 도움을 줬을 거라 생각하니까 심혈을 기울여서 쓴 것이죠.
 
 
   
@@ -206,13 +206,13 @@ tags:
   
 
 
-<레프트21>은 언론사로 등록돼있기는 하지만 ‘비영리’나 다름없이 운영되고 있습니다.
+&lt;레프트21>은 언론사로 등록돼있기는 하지만 ‘비영리’나 다름없이 운영되고 있습니다.
 
 
   
 
 
-그러나 그렇기 때문에 무궁무진한 가능성이 있다고 생각합니다. 여타 언론사들은 수익성 때문에 고려해야 하는 게 있는 데 반해서, <레프트21>은 독자들이 기사를 편히 읽을 수 있도록 집중하면 되기 때문입니다.
+그러나 그렇기 때문에 무궁무진한 가능성이 있다고 생각합니다. 여타 언론사들은 수익성 때문에 고려해야 하는 게 있는 데 반해서, &lt;레프트21>은 독자들이 기사를 편히 읽을 수 있도록 집중하면 되기 때문입니다.
 
 
   
@@ -230,7 +230,7 @@ tags:
   
 
 
-그리고 이런 혁신적인 인쇄 기능을 아무 논란없이 제 판단만으로 설치할 수 있었던 이유는, <레프트21>이 영리를 추구하는 신문사가 아니기 때문입니다.
+그리고 이런 혁신적인 인쇄 기능을 아무 논란없이 제 판단만으로 설치할 수 있었던 이유는, &lt;레프트21>이 영리를 추구하는 신문사가 아니기 때문입니다.
 
 
   
