--- a/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
+++ b/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
@@ -27,7 +27,7 @@ categories:
 
 이렇게 지난 호 보기를 강조한 이유가 있습니다.
 
-얼마 전 <레프트21> 애독자 한 분을 만났습니다. 그래서 최근 제가 붙인 기능을 소개해 줬죠. <a target="_blank" href="/webmaster/48" class="broken_link">‘지난 호 보기에서 online 표시 달았고, 온라인만 골라 볼 수 있게 했음</a>‘에서 소개한 기능을 알려준 것이죠.
+얼마 전 &lt;레프트21> 애독자 한 분을 만났습니다. 그래서 최근 제가 붙인 기능을 소개해 줬죠. <a target="_blank" href="/webmaster/48" class="broken_link">‘지난 호 보기에서 online 표시 달았고, 온라인만 골라 볼 수 있게 했음</a>‘에서 소개한 기능을 알려준 것이죠.
 
 그런데, 제가 새로 단 기능 자체보다도 지난 호 보기로 신문 표지들이 주욱 나오는 것에 더욱 놀라는 것이었습니다.
 
@@ -43,7 +43,7 @@ categories:
 
 그보다는, 지난 호 보기가 사람들 눈에 잘 띄지 않는 구나 하는 생각이 들었습니다.
 
-지난 호를 찾아 보는 것은 <레프트21> 독자들이 자주 하는 행위인 만큼, 지난 호 보기가 더 잘 보이도록 만들어야 겠다는 생각을 하게 됐습니다.
+지난 호를 찾아 보는 것은 &lt;레프트21> 독자들이 자주 하는 행위인 만큼, 지난 호 보기가 더 잘 보이도록 만들어야 겠다는 생각을 하게 됐습니다.
 
 그래서 이렇게 ‘지난 호 보기’를 강조한 것이죠. 사실 메뉴 목록에 있는 ‘지난 호/제휴자료 보기’와 정확히 겹치는데, 이건 어떻게 처리할지 고민 중입니다.
 
