--- a/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
+++ b/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
@@ -1,6 +1,6 @@
 ---
 id: 183
-title: '구글 검색으로 <레프트21> 검색하기'
+title: '구글 검색으로 &lt;레프트21> 검색하기'
 date: 2009-12-22T14:17:55+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -19,7 +19,7 @@ tags:
   - 노동자 연대
   - 타임라인
 ---
-<레프트21>은 검색엔진 최적화를 열심히 수행했습니다. 그 결과 기사 대부분이 검색에 잡히기 시작했습니다. 구글 검색에서 대부분의 기사를 검색할 수 있는 게 그 성과입니다.
+&lt;레프트21>은 검색엔진 최적화를 열심히 수행했습니다. 그 결과 기사 대부분이 검색에 잡히기 시작했습니다. 구글 검색에서 대부분의 기사를 검색할 수 있는 게 그 성과입니다.
 
 <div style="width: 590px" class="wp-caption aligncenter">
   <img src="/wp-content/uploads/1/cfile6.uf.200C135A4D08473B0F78B5.png" width="580" height="112" alt="" />
