--- a/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
+++ b/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
@@ -46,7 +46,7 @@ tags:
 
 개발자 입장에서는 일을 두 번 하는 셈이 되는 것이죠. 이것 때문에 전세계 개발자들이 IE6를 원망합니다. 진짭니다. 의심스러우시면 <a href="http://www.zdnet.co.kr/Contents/2010/02/26/zdnet20100226111020.htm" target="_blank">“IE6, 편히 잠드시길”…장례식 거행</a>이라는 기사와 <a href="http://www.ie6nomore.com/" target="_blank">IE6 no more!</a> 사이트를 방문해 보시기 바랍니다.
 
-<레프트21> 사이트를 수정하고 할 때도 항상 IE6에 맞춰서 몇 시간씩 추가 노동을 해야 하니 이거 참 다른 데 쓸 수 있는 역량을 낭비하고 있다는 생각이 드는 것도 어쩔 수 없는 일이지요.
+&lt;레프트21> 사이트를 수정하고 할 때도 항상 IE6에 맞춰서 몇 시간씩 추가 노동을 해야 하니 이거 참 다른 데 쓸 수 있는 역량을 낭비하고 있다는 생각이 드는 것도 어쩔 수 없는 일이지요.
 
 그래서 IE6로 들어오시는 분들에게는 아래와 같은 배너가 보이도록 조치했습니다. 이것은 전 세계에서 일고 있는 IE6 no more! 운동에 동참하는 의미로 한 것입니다.
 
