--- a/_posts/2010-03-29-시시껄렁만-중요하기는-한-자료-구조에-대해.md
+++ b/_posts/2010-03-29-시시껄렁만-중요하기는-한-자료-구조에-대해.md
@@ -27,7 +27,7 @@ tags:
 
 이 페이지는 어떻게 만들었을까요?
 
-1번. <a href="http://wspaper.org/article/7898" target="_blank"><레프트21> 첫 생일을 축하합니다 기사</a>에 있는 말을 일일이 긁어서 새로 페이지를 만든다.
+1번. <a href="http://wspaper.org/article/7898" target="_blank">&lt;레프트21> 첫 생일을 축하합니다 기사</a>에 있는 말을 일일이 긁어서 새로 페이지를 만든다.
 
 2번. 위 기사에 있는 걸 자동으로 긁어와서 뿌려 준다.
 
@@ -35,7 +35,7 @@ tags:
 
 프로그래밍에 몰두해 있다가 “이봐 녹풍씨~ 왕투쟁씨 축사 새로 추가했는데 그거 첫 화면에도 반영해 줘~!” 하는 소리를 듣고 첫 화면 HTML을 고치다가 흐름을 다 깨먹는 일이 없어도 된다는 얘기죠.
 
-그런데 그동안 <레프트21>을 비롯해서 많은 일처리들이 그리 간단하게 이뤄지지는 않았습니다. 보통 이런 사고과정을 거쳤던 것 같아요.
+그런데 그동안 &lt;레프트21>을 비롯해서 많은 일처리들이 그리 간단하게 이뤄지지는 않았습니다. 보통 이런 사고과정을 거쳤던 것 같아요.
 
 “긁어오는 코드를 짤까 그냥 손으로 긁을까… 급하니깐 코드 짜는 것보다 긁는 게 편하겠다!”
 
