--- a/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
+++ b/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
@@ -22,7 +22,7 @@ tags:
 
 음&#8230; 어떻게 된 일이냐&#8230; 
 
-저는 지지난 주 금요일에 <레프트21> 편집인이신 인식 씨와 사무실 베란다에서 커피를 마시고 있었어요. 같이 마시고 있었던 건 아니고 우연히 같이 있게된 것이었죠. 
+저는 지지난 주 금요일에 &lt;레프트21> 편집인이신 인식 씨와 사무실 베란다에서 커피를 마시고 있었어요. 같이 마시고 있었던 건 아니고 우연히 같이 있게된 것이었죠. 
 
 옆에서는 인식씨와 또 다른 분이 기후변화 토론회 준비 이야기를 하고 있었죠. 
 
@@ -34,7 +34,7 @@ tags:
 
 **<font size="6">헐~ ㅇ_ㅇ;;</font>** 
 
-이렇게 해서 <레프트21>의 토론회, ‘기후정의 운동의 쟁점과 전망’을 트위터로 생중계하게 된 것이었습니다. 
+이렇게 해서 &lt;레프트21>의 토론회, ‘기후정의 운동의 쟁점과 전망’을 트위터로 생중계하게 된 것이었습니다. 
 
 어떻게 생중계를 할 수 있는지 알아보는 건 다소 어려웠어요. ㅋㅋ 
 
