--- a/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
+++ b/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
@@ -24,7 +24,7 @@ tags:
 
 트위터가 정보 유통 통로 역할을 하게 되면서 레프트21도 트위터에 진출한지 꽤 됐어요. 얼마 전 <a target="_blank" href="http://wspaper.org/article/8005">금호타이어 농성장에서 사측이 노동자들을 폭행한 것을 알린 속보</a>는 트위터를 통해 퍼져서 보통 기사들보다 20배는 많은 사람들이 봤답니다.(<a target="_blank" href="http://www.ubervu.com/conversations/www.left21.com/article/8005?show=all">여기</a> 가면 얼마나 많은 사람들이 금호타이어 기사를 추천했는지 알 수 있어요.)
 
-그래서 <레프트21> 웹마스터인 저는&#8230; <레프트21> 트위터팀**(!)**의 논의에 따라 기사 하단에 트위터 버튼을 달기로 결정하고, 오늘 아침 <span style="font-weight: bold;">전격(!)</span> 단행했습니다.
+그래서 &lt;레프트21> 웹마스터인 저는&#8230; &lt;레프트21> 트위터팀**(!)**의 논의에 따라 기사 하단에 트위터 버튼을 달기로 결정하고, 오늘 아침 <span style="font-weight: bold;">전격(!)</span> 단행했습니다.
 
 위 버튼을 누르면 새 창이 뜨고 트위터 사이트로 이동을 하게 됩니다. 만약 로그인돼있지 않다면 아래와 같은 화면이 나오지요.
 
