--- a/_posts/2010-05-23-첫-화면-변경의-이유.md
+++ b/_posts/2010-05-23-첫-화면-변경의-이유.md
@@ -18,7 +18,7 @@ tags:
   - 첫 화면
   - 편집
 ---
-<레프트21> 첫 화면이 바뀌었다는 것을 눈치챈 분들 있으신가요? (설마 없지는 않겠죠? ㅠ.ㅠ)
+&lt;레프트21> 첫 화면이 바뀌었다는 것을 눈치챈 분들 있으신가요? (설마 없지는 않겠죠? ㅠ.ㅠ)
 
 <div>
   네, 바뀌었습니다. 바뀌었죠. 왜 바뀌었을까요?
