--- a/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
+++ b/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
@@ -32,7 +32,7 @@ tags:
 
 ## 배너광고와 텍스트 링크
 
-예전에는 배너가 달려 있었잖아요. ‘싱싱한 물고기처럼 <레프트21>을 싱싱하게 만들고 싶다면… <레프트21>을 정기구독ㆍ후원하세요’라는 문구가 써 있는 배너였습니다. 아, 그냥 여기 달아 두죠.
+예전에는 배너가 달려 있었잖아요. ‘싱싱한 물고기처럼 &lt;레프트21>을 싱싱하게 만들고 싶다면… &lt;레프트21>을 정기구독ㆍ후원하세요’라는 문구가 써 있는 배너였습니다. 아, 그냥 여기 달아 두죠.
 
 <p style="text-align: center;">
   <a class="oneYearBanner" href="http://wspaper.org/9_subscribe.php?from=1yearBanner" target="_blank"><img width="540" src="http://wspaper.org/include/1year/subSupNow.gif" /></a>
