--- a/_posts/2010-10-21-레프트21-홍보-문구를-블로그에-달아-주세요.md
+++ b/_posts/2010-10-21-레프트21-홍보-문구를-블로그에-달아-주세요.md
@@ -65,13 +65,13 @@ tags:
 
 아래 코드를 긁어서 넣으시면 됩니다.
 
-<p style=”margin-top: 1em;”><a style=”font-size: 1em; color: inherit;” href=”http://wspaper.org”>- 진보 언론 <레프트21>을 추천합니다!</a></p>
+<p style=”margin-top: 1em;”><a style=”font-size: 1em; color: inherit;” href=”http://wspaper.org”>- 진보 언론 &lt;레프트21>을 추천합니다!</a></p>
 
 아주 간단해요. 별로 어렵지도 않고요.
 
 (좀더 자신의 뜻대로 모양을 바꾸고 싶은 분들은 참고하세요. 복잡한 게 싫으면 이 괄호 안은 보지 마세요. : 위에서 font-size: 1em; 이라고 적힌 부분에서 숫자를 바꿔 주시면 사이즈를 조절할 수 있습니다. 1이 주변 글자와 같은 사이즈라고 생각하시면 됩니다. 주변 글자보다 2배로 하고 싶다면 2em 이라고 적어 주시면 되겠죠. color는 글자색입니다. inherit는 블로그에서 사용하시는 색을 그대로 사용한다는 뜻입니다. inherit 대신에 색깔을 직접 red나 blue라고 적어 주셔도 됩니다. 사용할 수 있는 단어는 <a href="http://webdesign.about.com/od/colorcharts/l/bl_csscolors.htm" target="_blank">css 색상 키워드 페이지</a>에서 보시면 됩니다. 포토샵좀 하시는 분들은 #000000 형태의 색상 코드를 사용하셔도 됩니다.)
 
-아니면 그냥 글을 쓸 때 무슨 글이든 상관없으니 그냥 “- 진보 언론 <레프트21>을 추천합니다!” 하고 쓰고 레프트21로 링크를 달아 주세요. 와우~ 글 중간에 넣으면 더 좋겠죠.
+아니면 그냥 글을 쓸 때 무슨 글이든 상관없으니 그냥 “- 진보 언론 &lt;레프트21>을 추천합니다!” 하고 쓰고 레프트21로 링크를 달아 주세요. 와우~ 글 중간에 넣으면 더 좋겠죠.
 
 무슨 글이든 상관 없어요. 제 블로그에 가 보세요. 진보랑은 아무 상관도 없는 프로그래밍 블로그일 뿐이예요. 그런데도 많은 사람들이 저 광고를 클릭했다는 거죠.
 
