--- a/_posts/2010-11-24-인쇄페이지에-이미지넣기기능-추가했습니다.md
+++ b/_posts/2010-11-24-인쇄페이지에-이미지넣기기능-추가했습니다.md
@@ -19,10 +19,10 @@ tags:
 
 이 모든 발전을 포함해 인쇄기능의 가장 정점은 바로 “<a target="_blank" href="/entry/%EC%9D%B8%EC%87%84%ED%95%A0-%EB%95%8C-%EC%8A%A4%ED%83%80%EC%9D%BC%EC%9D%84-%EB%A7%88%EC%9D%8C%EB%8C%80%EB%A1%9C-%EA%B3%A0%EB%A5%B4%EC%9E%90">인쇄 할 때 스타일을 마음대로 고르자</a>“입니다. 인쇄 페이지는 기본적으로 출력해서 읽을 때 가독성을 높이기 위해 텍스트 위주로, 토너를 낭비하는 불필요한 이미지를 제거하도록 강제했습니다. 그러나 가독성은 주관적으로 선호하는 폰트종류, 폰트 크기 등의 조건들이 저마다 다릅니다. 따라서 폰트와 줄간격 등을 조절할 수 있도록 개선했던 거죠.
 
-그런데 어제 울산에 현대차 비정규직 노동자들의 점거파업을 취재하기 위해 공장에 들어갔었던 사진기자와 얘기를 나누다가 노동자들이 공장안에서 신문기사들을 뽑아 벽에 붙여놓고 보는 것을 알게되었습니다. 다른 언론의 기사들은 사진들이 함께 출력되어서 노동자들이 보기 편하다고 하더군요. <레프트21>의 기사는 출력하면 글만 빼곡히 있어서 보기 어려울 수 있다는 사실을 알게되었습니다.
+그런데 어제 울산에 현대차 비정규직 노동자들의 점거파업을 취재하기 위해 공장에 들어갔었던 사진기자와 얘기를 나누다가 노동자들이 공장안에서 신문기사들을 뽑아 벽에 붙여놓고 보는 것을 알게되었습니다. 다른 언론의 기사들은 사진들이 함께 출력되어서 노동자들이 보기 편하다고 하더군요. &lt;레프트21>의 기사는 출력하면 글만 빼곡히 있어서 보기 어려울 수 있다는 사실을 알게되었습니다.
 
 그래서! 사진을 추가할 수 있는 버튼을 만들었습니다. 인쇄를 누르면 인쇄페이지로 넘어갑니다.(아래그림) 인쇄페이지에서 ‘이미지 포함’을 선택하면 빠져있던 이미지가 다시 삽입됩니다. 물론 원래 사진이 없는 기사의 경우에는 체크박스를 눌러봤자 변함이 없겠죠.
 
 <img src="/wp-content/uploads/1/cfile1.uf.112446474D0847901F7461.jpg" class="aligncenter" width="580" height="645" alt="" />
 
-잘 알고 사용하면 <레프트21> 인쇄기능을 파워풀하게 사용하실 수 있습니다. 사용하시다가 불편한 점이나 좋은 아이디어 있으면 제보 바로바로 부탁합니다.^^
+잘 알고 사용하면 &lt;레프트21> 인쇄기능을 파워풀하게 사용하실 수 있습니다. 사용하시다가 불편한 점이나 좋은 아이디어 있으면 제보 바로바로 부탁합니다.^^
