--- a/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
+++ b/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
@@ -19,17 +19,17 @@ tags:
   - 현대차 비정규직
   - 현대차 비정규직 파업투쟁
 ---
-15일 현대자동차 비정규직 노동자들이 점거파업을 시작한지 일주일정도 되었습니다. 벌써 빠르게 연대가 확산되고 있습니다. <레프트21>도 울산에 내려가 <a href="http://photo.left21.com:8080/photo_issue.php?title_no=264" target="_blank">집회에 참가</a>하고 투쟁 소식을 알리기 위해 특별취재팀이 열심히 발로 뛰고 있습니다. <a href="http://www.alltogether.or.kr/" target="_blank">다함께</a> 회원들과 <레프트21> 독자분들도 거리에서 신문을 판매하고 현대차 투쟁의 정당성을 논리정연하게 설명하는 소책자도 판매하면서 지지활동을 벌이고 있습니다. 
+15일 현대자동차 비정규직 노동자들이 점거파업을 시작한지 일주일정도 되었습니다. 벌써 빠르게 연대가 확산되고 있습니다. &lt;레프트21>도 울산에 내려가 <a href="http://photo.left21.com:8080/photo_issue.php?title_no=264" target="_blank">집회에 참가</a>하고 투쟁 소식을 알리기 위해 특별취재팀이 열심히 발로 뛰고 있습니다. <a href="http://www.alltogether.or.kr/" target="_blank">다함께</a> 회원들과 &lt;레프트21> 독자분들도 거리에서 신문을 판매하고 현대차 투쟁의 정당성을 논리정연하게 설명하는 소책자도 판매하면서 지지활동을 벌이고 있습니다. 
 
-먼저 점거를 하고 있는 노동자들이 힘을 잃지 않고 끝까지 싸울 수 있도록 힘을 주는 일이 필요하겠죠. 더욱 중요하게는 점거가 확대되거나 정규직 노동자들을 비롯한 노동자들의 실질적인 연대가 확대되는 일입니다. 그것을 위해 <레프트21>을 단순히 지지 차원을 넘어서서 구체적인 전술을 주장하고 호소하고 있습니다.
+먼저 점거를 하고 있는 노동자들이 힘을 잃지 않고 끝까지 싸울 수 있도록 힘을 주는 일이 필요하겠죠. 더욱 중요하게는 점거가 확대되거나 정규직 노동자들을 비롯한 노동자들의 실질적인 연대가 확대되는 일입니다. 그것을 위해 &lt;레프트21>을 단순히 지지 차원을 넘어서서 구체적인 전술을 주장하고 호소하고 있습니다.
 
-따라서 독자여러분들이 <레프트21>의 기사를 온라인 차원에서도 홍보해주시는 것이 현대차 비정규직 파업투쟁을 승리로 이끌기 위한 또 하나의 방법이기도 합니다. 아래 여러가지 방법들을 정리해봤습니다. 온라인 홍보하실 때에 참고해주세요.
+따라서 독자여러분들이 &lt;레프트21>의 기사를 온라인 차원에서도 홍보해주시는 것이 현대차 비정규직 파업투쟁을 승리로 이끌기 위한 또 하나의 방법이기도 합니다. 아래 여러가지 방법들을 정리해봤습니다. 온라인 홍보하실 때에 참고해주세요.
 
-## <레프트21>기사를 활용해주세요
+## &lt;레프트21>기사를 활용해주세요
 
-<a href="http://twitter.com/#%21/left21twit" target="_blank">트위터로 보낸 <레프트21>의 기사</a>를 RT해주세요. RT할 때는 본인이 기사를 본 짤막한 소감과 함께 해주시면 더 좋습니다. &nbsp;또는 웹사이트에서 기사의 맨 아래의 “트위터로 보내요”버튼을 통해 기사를 트윗하실 수도 있습니다.
+<a href="http://twitter.com/#%21/left21twit" target="_blank">트위터로 보낸 &lt;레프트21>의 기사</a>를 RT해주세요. RT할 때는 본인이 기사를 본 짤막한 소감과 함께 해주시면 더 좋습니다. &nbsp;또는 웹사이트에서 기사의 맨 아래의 “트위터로 보내요”버튼을 통해 기사를 트윗하실 수도 있습니다.
 
-블로그를 운영하신다면 현대차 비정규직 관련글을 포스팅해주세요. 글을 쓰실 때에는 관련기사를 글 내용에 링크를 걸어 자세한 내용을 기사를 통해서도 볼 수 있게 해주세요. 트위터나 블로그를 통해 현대차 관련 글을 쓰실 때에도 관련된 <레프트21>기사를 링크걸어주세요. 가장 좋기로는 기사의 일부를 인용한 후 기사전문을 볼 수 있는 링크를 달는 것입니다.
+블로그를 운영하신다면 현대차 비정규직 관련글을 포스팅해주세요. 글을 쓰실 때에는 관련기사를 글 내용에 링크를 걸어 자세한 내용을 기사를 통해서도 볼 수 있게 해주세요. 트위터나 블로그를 통해 현대차 관련 글을 쓰실 때에도 관련된 &lt;레프트21>기사를 링크걸어주세요. 가장 좋기로는 기사의 일부를 인용한 후 기사전문을 볼 수 있는 링크를 달는 것입니다.
 
 <img src="/wp-content/uploads/1/cfile6.uf.11629A4A4D08479122F766.png" class="aligncenter" width="580" height="226" alt="" />
 
@@ -39,7 +39,7 @@ tags:
   </div>
   
   <p>
-    &nbsp;<레프트21> 홈페이지에서 <a href="http://wspaper.org/6_issue.php?issue_no=85" target="_blank">현대차 비정규직 투쟁 집중이슈페이지</a>를 링크하시는 것도 중요합니다. <레프트21>의 페이지 중에서는 현대차 비정규직 파업관련 검색결과에서 이 페이지가 가장 상위에 랭크됩니다. 그리고 집중이슈페이지에 가보시면 “집중이슈 퍼가기” 버튼이 있습니다. 이 버튼을 클릭하면 집중이슈 최근 목록을 퍼갈 수 있는 소스가 나옵니다. 이 소스를 긁어서 퍼나르는 것도 좋은 방법입니다.
+    &nbsp;&lt;레프트21> 홈페이지에서 <a href="http://wspaper.org/6_issue.php?issue_no=85" target="_blank">현대차 비정규직 투쟁 집중이슈페이지</a>를 링크하시는 것도 중요합니다. &lt;레프트21>의 페이지 중에서는 현대차 비정규직 파업관련 검색결과에서 이 페이지가 가장 상위에 랭크됩니다. 그리고 집중이슈페이지에 가보시면 “집중이슈 퍼가기” 버튼이 있습니다. 이 버튼을 클릭하면 집중이슈 최근 목록을 퍼갈 수 있는 소스가 나옵니다. 이 소스를 긁어서 퍼나르는 것도 좋은 방법입니다.
   </p>
   
   <p>
@@ -55,7 +55,7 @@ tags:
   </p>
   
   <p>
-    활동이라 함은, <레프트21> 판매경험이나, 현대차 비정규직 투쟁 지지 모금, 지지 배너걸기 등이 될 수 있겠죠?
+    활동이라 함은, &lt;레프트21> 판매경험이나, 현대차 비정규직 투쟁 지지 모금, 지지 배너걸기 등이 될 수 있겠죠?
   </p>
   
   <p>
@@ -63,7 +63,7 @@ tags:
   </p>
   
   <p>
-    자신의 지지활동, 연대활동의 경험은 <레프트21> 독자편지에 보내주시면 많은 구독자와 홈페이지 방문자들이 볼 수 있습니다. 잘 정리되지 않았더라도 괜찮습니다. (<a href="http://wspaper.org/D_letter.php" target="_blank" class="broken_link">독자편지 보내기</a>)
+    자신의 지지활동, 연대활동의 경험은 &lt;레프트21> 독자편지에 보내주시면 많은 구독자와 홈페이지 방문자들이 볼 수 있습니다. 잘 정리되지 않았더라도 괜찮습니다. (<a href="http://wspaper.org/D_letter.php" target="_blank" class="broken_link">독자편지 보내기</a>)
   </p>
   
   <p>
