--- a/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
+++ b/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
@@ -17,7 +17,7 @@ tags:
   - 이집트혁명
   - 제이콥닐슨
 ---
-특별이슈 페이지. 그러니까 집중이슈 중에서 정말 특별히 강조하기 위해 만든 거예요. 현재 특별이슈 페이지는 <a title="[http://wspaper.org/6_issue.php?issue_no=87]로 이동합니다." target="_blank" href="http://wspaper.org/6_issue.php?issue_no=87">중동의 민중반란</a>입니다. 현재 이집트에서 벌어지고 있는 혁명은 전 세계 노동자들에게 큰 영감을 주고 있습니다. <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/"><레프트21></a>에서도 이집트 소식들을 혁명적 관점에서 보는 기사들을 비중을 두고 다루고 있습니다. 그래서 특별이슈 페이지를 만들게 되었죠. 
+특별이슈 페이지. 그러니까 집중이슈 중에서 정말 특별히 강조하기 위해 만든 거예요. 현재 특별이슈 페이지는 <a title="[http://wspaper.org/6_issue.php?issue_no=87]로 이동합니다." target="_blank" href="http://wspaper.org/6_issue.php?issue_no=87">중동의 민중반란</a>입니다. 현재 이집트에서 벌어지고 있는 혁명은 전 세계 노동자들에게 큰 영감을 주고 있습니다. <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/">&lt;레프트21></a>에서도 이집트 소식들을 혁명적 관점에서 보는 기사들을 비중을 두고 다루고 있습니다. 그래서 특별이슈 페이지를 만들게 되었죠. 
 
 어떻게 바뀌었나구요? 예전페이지와 특별집중이슈를 적용한 페이지의 구조를 비교해보겠습니다.
 
@@ -32,7 +32,7 @@ tags:
   </p>
 </div>
 
-위는 기존 <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/"><레프트21></a> 첫화면 구조입니다. 특별이슈 페이지를 넣은 경우 아래와 같이 됩니다. 
+위는 기존 <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/">&lt;레프트21></a> 첫화면 구조입니다. 특별이슈 페이지를 넣은 경우 아래와 같이 됩니다. 
 
 <div style="width: 380px" class="wp-caption aligncenter">
   <img src="/wp-content/uploads/1/cfile26.uf.1269963E4D58FADA246C1F.png" width="370" height="369" alt="" filename="cfile26.uf.1269963E4D58FADA246C1F.png" filemime="" />
@@ -65,7 +65,7 @@ tags:
 
 <img src="/wp-content/uploads/1/cfile29.uf.1615CA4C4D59026A1B4F18.png" class="aligncenter" width="630" height="563" alt="" filename="스크린샷.png" filemime="image/jpeg" />
   
-위의 디자인이 최선의 디자인이라고 생각하지는 않습니다. 하지만 사용자를 배려하는 디자인을 위해 더욱 발전하는 홈페이지를 위해 노력할 겁니다. 더욱 발전하는 <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/"><레프트21></a>이 될 수 있도록 독자여러분! 응원과 의견을 허심탄회하게 보내주세요~^^
+위의 디자인이 최선의 디자인이라고 생각하지는 않습니다. 하지만 사용자를 배려하는 디자인을 위해 더욱 발전하는 홈페이지를 위해 노력할 겁니다. 더욱 발전하는 <a title="[http://wspaper.org/]로 이동합니다." target="_blank" href="http://wspaper.org/">&lt;레프트21></a>이 될 수 있도록 독자여러분! 응원과 의견을 허심탄회하게 보내주세요~^^
 
 <div class="simple-footnotes">
   <p class="notes">
