--- a/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
+++ b/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
@@ -11,7 +11,7 @@ tistory_id:
 categories:
   - 개발 이야기
 ---
-<레프트21> 웹마스터들은 웹사이트를 개선하기 위해 세미나를 진행하고 있습니다. 요즘 보는 책은 바로 《웹 사용성 중심의 웹 사이트 제작론》이라는 책입니다.&nbsp;
+&lt;레프트21> 웹마스터들은 웹사이트를 개선하기 위해 세미나를 진행하고 있습니다. 요즘 보는 책은 바로 《웹 사용성 중심의 웹 사이트 제작론》이라는 책입니다.&nbsp;
 
 그런데 이 책에서&nbsp;제이콥 닐슨은 “사용자들이 이미 방문했던 페이지에 대해 일단 알게 되면 부주의하게 다시 방문하는 일이 줄어든다” 고 말합니다. 그리고 이미 방문한 링크를 표시해 주지 않는 것이 “심각한 사용성 문제”가 될 수 있다고 말합니다.
 
@@ -23,7 +23,7 @@ categories:
 > 
 > ㅡ 웹 사용성 중심의 웹 사이트 제작론, 61p</p> 
 
-어익후! <레프트21>은 이미 방문한 링크를 표시해 주는 기능이 없었습니다. <레프트21> 웹사이트가 생긴 지 2년이 됐지만 그런 걸 고려한 적이 없었죠.
+어익후! &lt;레프트21>은 이미 방문한 링크를 표시해 주는 기능이 없었습니다. &lt;레프트21> 웹사이트가 생긴 지 2년이 됐지만 그런 걸 고려한 적이 없었죠.
 
 하지만 생각해 보니 저도 이미 본 기사를 또 클릭해 들어가서 내용을 보고 나서야 내가 본 기사라는 걸 눈치챈 적이 있는 것 같습니다.
 
