--- a/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
+++ b/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
@@ -13,7 +13,7 @@ categories:
 ---
 레프트21 모바일 사이트가 얼마 전에 개장했습니다. 단지 화면을 좀 모바일에 맞게 개편한 것이라고 생각하실 수도 있습니다. 하지만, 곳곳에 배려들이 들어가 있다는 사실을 알아 주셨으면 좋겠습니다. ^^
 
-어떤 기획의도를 가지고 모바일 사이트를 만들었는지 적은 글이 이 글 바로 위에 있는 <a title="[/90]로 이동합니다." href="/90" target="_blank" class="broken_link">“<레프트21을 그대 손 안에!”</a>입니다. 저 글을 못 읽으신 분들이라면 저 글 먼저 읽고 이 글을 읽으러 돌아 오세요.
+어떤 기획의도를 가지고 모바일 사이트를 만들었는지 적은 글이 이 글 바로 위에 있는 <a title="[/90]로 이동합니다." href="/90" target="_blank" class="broken_link">“&lt;레프트21을 그대 손 안에!”</a>입니다. 저 글을 못 읽으신 분들이라면 저 글 먼저 읽고 이 글을 읽으러 돌아 오세요.
 
 지금부터 이 글에서는 눈여겨 보지 않으면 잘 모를 수 있는, 그런 기능들을 간략히 설명드리도록 하겠습니다.
 
