--- a/_posts/2015-09-18-노동자-연대-텔레그램-알리미-출시-온라인-기사를-빠.md
+++ b/_posts/2015-09-18-노동자-연대-텔레그램-알리미-출시-온라인-기사를-빠.md
@@ -59,9 +59,9 @@ categories:
 
 (속칭) ‘꼬라 박으면’ 얼마나 걸리겠냐 하는 물음에 우리 팀 최고 개발자는 이틀이라고 답했습니다. 철도 파업으로 고양돼 있던 우리 개발팀은 “그래 미친 짓 한 번 해 보자!” 하고 결정을 했고, 주말을 하얗게 불태웠습니다. 그렇게 나온 것이 안드로이드 앱 ‘노동자 연대 알리미’입니다(사실 2012년부터 계획은 돼 있었습니다만 하지 못하고 있었죠). 당시 웹마스터 블로그에 썼던 글을 인용해 보겠습니다.
 
-> “철도 파업 정당하다” 하고 주장하는 저희 <레프트21>은, 정부와 사측의 이데올로기 공세에 맞서서 파업 전부터 그리고 파업 중인 지금은 더더욱 말할 것도 없이 철도 노동자들의 투지와 사기를 고양하고, 더 효과적인 전술을 제안하기 위해 전국을 발로 뛰고 있습니다. 그에 따라 온라인 기사도 신속하게 업데이트하고 있습니다. 이런 덕인지 한 철도 노조 대의원은 “철도노조 투쟁에 관해 가장 빨리, 자세히 다룬다”, “<레프트21> 웹사이트를 통해 도움을 많이 받고 있다”라는 고마운 말씀을 해 주시기도 했습니다.
+> “철도 파업 정당하다” 하고 주장하는 저희 &lt;레프트21>은, 정부와 사측의 이데올로기 공세에 맞서서 파업 전부터 그리고 파업 중인 지금은 더더욱 말할 것도 없이 철도 노동자들의 투지와 사기를 고양하고, 더 효과적인 전술을 제안하기 위해 전국을 발로 뛰고 있습니다. 그에 따라 온라인 기사도 신속하게 업데이트하고 있습니다. 이런 덕인지 한 철도 노조 대의원은 “철도노조 투쟁에 관해 가장 빨리, 자세히 다룬다”, “&lt;레프트21> 웹사이트를 통해 도움을 많이 받고 있다”라는 고마운 말씀을 해 주시기도 했습니다.
 > 
-> 파업 중에 온라인 기사가 많이 나오고 있고, 전술의 핵심은 타이밍입니다. 구체적인 당면 문제를 다루는 <레프트21> 기사는 가급적 빨리 노조원들에게 배달되는 게 당연히 좋습니다. 그래서 웹 개발팀이 할 수 있는 게 많지는 않지만, 할 수 있는 최선을 다 해 보고자 만든 것이 알리미 앱입니다. 즉, <레프트21> 알리미 앱 개발은 전국의 철도 노동자들에게 온라인으로나마 <레프트21>을 ‘배달’하기 위해 서두르게 된 것입니다.
+> 파업 중에 온라인 기사가 많이 나오고 있고, 전술의 핵심은 타이밍입니다. 구체적인 당면 문제를 다루는 &lt;레프트21> 기사는 가급적 빨리 노조원들에게 배달되는 게 당연히 좋습니다. 그래서 웹 개발팀이 할 수 있는 게 많지는 않지만, 할 수 있는 최선을 다 해 보고자 만든 것이 알리미 앱입니다. 즉, &lt;레프트21> 알리미 앱 개발은 전국의 철도 노동자들에게 온라인으로나마 &lt;레프트21>을 ‘배달’하기 위해 서두르게 된 것입니다.
 > 
 > -?[안드로이드 앱 출시 ? 새 기사를 실시간으로 받아 볼 수 있습니다](/archives/425)
 
