--- a/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
+++ b/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
@@ -1,6 +1,6 @@
 ---
 id: 5
-title: '<레프트21> 을 소개합니다.'
+title: '&lt;레프트21> 을 소개합니다.'
 date: 2009-03-12T18:30:00+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -16,7 +16,7 @@ tags:
 ---
 드뎌! &lt;레프트21>의 홈페이지가 개장했습니다.
 
-이번 13일에 새롭게 창간되는 <레프트21>에 대한 소개는 www.left21.com에 가시면 보실 수 있습니다. 권력과 자본으로부터 철저하게 독립된 우리 언론사의 날카로운 비판을 시원하게 느껴보시기 바랍니다.
+이번 13일에 새롭게 창간되는 &lt;레프트21>에 대한 소개는 www.left21.com에 가시면 보실 수 있습니다. 권력과 자본으로부터 철저하게 독립된 우리 언론사의 날카로운 비판을 시원하게 느껴보시기 바랍니다.
   
 자주 오셔서 기사를 보시는 것 외에도 독자편지를 통해 기고나 토론과 논쟁도 활발히 해주셨으면 하는 바램입니다. 물론 정기구독 강춥니다!!ㅎ
   
