--- a/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
+++ b/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
@@ -1,6 +1,6 @@
 ---
 id: 6
-title: '<레프트21> ‘맑은 고딕’에 최적화된 디자인 !!'
+title: '&lt;레프트21> ‘맑은 고딕’에 최적화된 디자인 !!'
 date: 2009-03-12T19:19:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -15,11 +15,11 @@ tags:
   - 맑은 고딕
   - 맑은 고딕 최적화
 ---
-## <레프트21>홈페이지 기본 폰트
+## &lt;레프트21>홈페이지 기본 폰트
 
-저희 <레프트21>의 홈페이지는 애초 디자인을 기획 할 당시엔 기존의 기본으로 제공되던 폰트(굴림)보다 더 보기 편하고, 디자인적으로도 앞서있는 ‘맑은 고딕’을 기본글꼴로 하는 혁명적?인 계획을 세웠더랍니다. 물론 ‘굴림’과 같은 더욱 대중적인 폰트에서도 이상없도록 디자인했음은 물론입니다. 
+저희 &lt;레프트21>의 홈페이지는 애초 디자인을 기획 할 당시엔 기존의 기본으로 제공되던 폰트(굴림)보다 더 보기 편하고, 디자인적으로도 앞서있는 ‘맑은 고딕’을 기본글꼴로 하는 혁명적?인 계획을 세웠더랍니다. 물론 ‘굴림’과 같은 더욱 대중적인 폰트에서도 이상없도록 디자인했음은 물론입니다. 
 
-그럼에도 아직 ‘맑은 고딕’을 기본으로 사용하는 홈페이지는 드물고, ‘맑은 고딕’은 사용자의 컴에 폰트가 설치되있더라도 최적화해주어야 한다는 단점이 있습니다. 때문에 <레프트21>의 기본 폰트는 굴림으로 설정 했지만, 몇 가지 귀찮을 만한 노력을 하신다면 ‘맑은 고딕’으로도 저희 기사를 보실 수가 있을 겁니다. 몇 가지 단점에도 불구하고 맑은 고딕으로 보시길 권합니다. 그에 대한 안내를 하고자 합니다. 
+그럼에도 아직 ‘맑은 고딕’을 기본으로 사용하는 홈페이지는 드물고, ‘맑은 고딕’은 사용자의 컴에 폰트가 설치되있더라도 최적화해주어야 한다는 단점이 있습니다. 때문에 &lt;레프트21>의 기본 폰트는 굴림으로 설정 했지만, 몇 가지 귀찮을 만한 노력을 하신다면 ‘맑은 고딕’으로도 저희 기사를 보실 수가 있을 겁니다. 몇 가지 단점에도 불구하고 맑은 고딕으로 보시길 권합니다. 그에 대한 안내를 하고자 합니다. 
 
 ## 맑은 고딕 설치 안내
 
