--- a/_posts/2009-12-20-목록-클릭시-새-창-띄우기-전체-기사와-기본검색에-사.md
+++ b/_posts/2009-12-20-목록-클릭시-새-창-띄우기-전체-기사와-기본검색에-사.md
@@ -42,15 +42,15 @@ tags:
   </p>
 </div>
 
-사실, 처음에 <레프트21> 사이트를 제작할 때 시간에 쫓겨서 만들지 못했던 기능입니다. 만들어야지 생각만 하고 차일피일 미루다가 지금까지 왔는데요, 목록에서 사진 썸네일이 출력되면 그리 나쁘지는 않지만 핵심적인 기능은 아니라고 생각했기 때문입니다.
+사실, 처음에 &lt;레프트21> 사이트를 제작할 때 시간에 쫓겨서 만들지 못했던 기능입니다. 만들어야지 생각만 하고 차일피일 미루다가 지금까지 왔는데요, 목록에서 사진 썸네일이 출력되면 그리 나쁘지는 않지만 핵심적인 기능은 아니라고 생각했기 때문입니다.
 
 그러나 오판이었던 것 같습니다. 사진을 기준으로 기사를 보는 사람들도 (소수겠지만) 분명히 있다는 것을 확인했습니다. 물론 사진 기자 분은 기사에 어떤 사진이 사용됐는지 확인하기 위한 용도로 요청한 것이지만, 저도 돌이켜 보면 사진을 기준으로 기사를 찾았던 적이 있었던 것 같습니다.
 
 그래서 일단 <a target="_blank" href="http://wspaper.org/1_news_all.php">전체기사 목록보기</a>와 기본 검색에는 사진이 나오도록 처리했습니다.
 
-구글 검색에서는 사진 썸네일을 기본으로 제공하지 않는 것 같습니다. 구글 검색은 여러 형태로 제공되는데요, <레프트21>의 구글 검색뿐 아니라 그냥 구글 검색에서도 사진 썸네일을 기본으로 제공하지는 않습니다. 다만, 검색도구를 열어서 이미지 미리 보기를 선택하면 사진 썸네일을 볼 수 있죠.
+구글 검색에서는 사진 썸네일을 기본으로 제공하지 않는 것 같습니다. 구글 검색은 여러 형태로 제공되는데요, &lt;레프트21>의 구글 검색뿐 아니라 그냥 구글 검색에서도 사진 썸네일을 기본으로 제공하지는 않습니다. 다만, 검색도구를 열어서 이미지 미리 보기를 선택하면 사진 썸네일을 볼 수 있죠.
 
-구글 검색으로 <레프트21> 사진 썸네일을 보려면 좀 골치가 아픕니다. 예전에 ‘<a href="/entry/google-advanced-search" target="_blank">더 효과적으로 검색 기능을 활용하자!</a>‘라는 글을 쓴 적이 있죠? 그걸 참고하시면 되는데요. 구글 검색을 할 때 검색창에 아래처럼 써 주면 됩니다.(‘검색어’ 대신 원하는 검색어를 넣고 검색 버튼 누르시면 실제로 구글 검색 결과 페이지로 갑니다.)
+구글 검색으로 &lt;레프트21> 사진 썸네일을 보려면 좀 골치가 아픕니다. 예전에 ‘<a href="/entry/google-advanced-search" target="_blank">더 효과적으로 검색 기능을 활용하자!</a>‘라는 글을 쓴 적이 있죠? 그걸 참고하시면 되는데요. 구글 검색을 할 때 검색창에 아래처럼 써 주면 됩니다.(‘검색어’ 대신 원하는 검색어를 넣고 검색 버튼 누르시면 실제로 구글 검색 결과 페이지로 갑니다.)
 
 위에서 검색 버튼 눌렀을 때 나오는 페이지에서 ‘검색도구 열기&#8230;’를 클릭하고, ‘이미지 미리보기’를 누르면 기사에 포함된 사진들을 볼 수 있습니다. 아래 그림을 참고하세요.
 
@@ -89,7 +89,7 @@ tags:
 ## 독자와 소통의 중요성  
 
 
-사실 기자들은 자신이 <레프트21>의 열혈 독자기도 합니다. 사이트의 훌륭한 사용자인 것이죠. 만약 이 분들이 적극적으로 자신이 불편한 점을 저에게 말해 주지 않았다면 (비록 작은 개선이지만) 오늘 개선은 더 늦춰졌을지도 모르겠습니다. 기사 목록에서 새 창으로 기사를 띄우는 것은 영영 안 됐을 지도 모르는 일입니다. 그런 점에서 독자 분들이 아이디어나 불편한 점을 말해 주는 것은 굉장히 도움이 됩니다.
+사실 기자들은 자신이 &lt;레프트21>의 열혈 독자기도 합니다. 사이트의 훌륭한 사용자인 것이죠. 만약 이 분들이 적극적으로 자신이 불편한 점을 저에게 말해 주지 않았다면 (비록 작은 개선이지만) 오늘 개선은 더 늦춰졌을지도 모르겠습니다. 기사 목록에서 새 창으로 기사를 띄우는 것은 영영 안 됐을 지도 모르는 일입니다. 그런 점에서 독자 분들이 아이디어나 불편한 점을 말해 주는 것은 굉장히 도움이 됩니다.
 
 혹시 이 글을 읽는 지금, 저에게 할 말이 있으시다면 1분만 시간을 내서 ‘<a target="_blank" href="/entry/report-and-proposal">홈페이지 오류신고, 개선사항 제안</a>‘ 페이지에 댓글을 남겨 주세요. 많은 도움이 된답니다.
 
