--- a/_posts/2010-02-08-구글의-웹마스터-퀴즈에서-4등을-하다.md
+++ b/_posts/2010-02-08-구글의-웹마스터-퀴즈에서-4등을-하다.md
@@ -21,6 +21,6 @@ tags:
 
 난이도가 꽤 됐나봐요. 제 점수가 65점인데 4등이니까요.(상품 같은 거 없는 재미를 위한 퀴즈였어요.)
 
-어쨌든, <레프트21> 독자 여러분, 여러분은 꽤 실력이 괜찮은 웹마스터가 관리하는 홈페이지를 보고 계신 겁니다! ^^ (하고 자랑질을;;)
+어쨌든, &lt;레프트21> 독자 여러분, 여러분은 꽤 실력이 괜찮은 웹마스터가 관리하는 홈페이지를 보고 계신 겁니다! ^^ (하고 자랑질을;;)
 
 고수 분들이 모두 퀴즈에 참가했다면 제가 4등할 일은 없었을 거라는 겸손(!)의 말을 덧붙이며, 자랑질을 마칩니다. ^^
