--- a/_posts/2011-10-12-〈레프트21〉을-그대-손-안에-―-〈레프트21〉-모바일-사.md
+++ b/_posts/2011-10-12-〈레프트21〉을-그대-손-안에-―-〈레프트21〉-모바일-사.md
@@ -94,7 +94,7 @@ tags:
 
 게다가 새로운 모바일 기기가 만들어지더라도 일일이 대응할 필요가 없다는 장점도 생깁니다.&nbsp;
 
-<레프트21>이 취한 방식을 사용한다면 비용을 상당히 줄일 수 있는 것입니다.
+&lt;레프트21>이 취한 방식을 사용한다면 비용을 상당히 줄일 수 있는 것입니다.
 
 해당 웹사이트의 구조가 웹표준을 잘 지키지 않았거나, HTML 마크업을 올바른 쓰임새에 따라 사용하지 않았다면&nbsp;물론 반응형 웹디자인을 사용하는 것이 만만한 작업이 아닐 수 있습니다.
 
