--- a/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
+++ b/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
@@ -1,6 +1,6 @@
 ---
 id: 5
-title: '&lt;레프트21> 을 소개합니다.'
+title: '<레프트21> 을 소개합니다.'
 date: 2009-03-12T18:30:00+00:00
 author: 노동자 연대 웹마스터
 layout: post
