--- a/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
+++ b/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
@@ -1,6 +1,6 @@
 ---
 id: 6
-title: '&lt;레프트21> ‘맑은 고딕’에 최적화된 디자인 !!'
+title: '<레프트21> ‘맑은 고딕’에 최적화된 디자인 !!'
 date: 2009-03-12T19:19:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
