--- a/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
+++ b/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
@@ -14,7 +14,7 @@ categories:
 &lt;레프트21>처럼 전혀 기업광고도, 정부지원도 받지 않는 신문은 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">독자 여러분의 후원</a>이 정말 중요합니다. 그런데, 얼마 전 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원페이지</a>를 보다가, 좀 불편해 보이는 점을 발견했습니다.
 
 <div class="imageblock center" style="text-align: center; clear: both;">
-  <img src="/attach/3/cfile23.uf.1262AD4A4D0847211D8A3B.png" alt="사용자 삽입 이미지" height="415" width="500" />
+  <img src="/wp-content/uploads/1/cfile23.uf.1262AD4A4D0847211D8A3B.png" alt="" height="415" width="500" />
 </div>
 
 
@@ -35,21 +35,14 @@ categories:
 
 위쪽 보다는 아래쪽이 사용자들 입장에서 더욱 편리하겠죠?
 
-<s>원리는 간단합니다. 소스를 보세요.</s>
+원리는 간단합니다. 소스를 보세요.
 
-<pre title="code" class="brush: xhtml;"><!--이 코드는 마크업에 맞지 않는 코드이니 참고하지 마시고 아래쪽 코드를 참고하세요.-->
-&lt;p&gt;&lt;strong&gt;*동그라미를 클릭해야만 하는 경우&lt;/strong&gt;&lt;/p&gt;
+<pre title="code" class="brush: xhtml;">&lt;p&gt;&lt;strong&gt;*동그라미를 클릭해야만 하는 경우&lt;/strong&gt;&lt;/p&gt;
 &lt;p&gt;&lt;input name="a" type="radio" value="0" /&gt;후원하기 &lt;input name="a" type="radio" value="0" /&gt;일시 후원하기&lt;/p&gt;
 &lt;p&gt;&lt;strong&gt;*글자를 클릭해도 동그라미가 선택되는 경우&lt;/strong&gt;&lt;/p&gt;
 &lt;p&gt;&lt;label style="cursor:pointer;"&gt;&lt;input name="b" type="radio" value="0" /&gt;후원하기&lt;/label&gt; &lt;label style="cursor:pointer;"&gt;&lt;input name="b" type="radio" value="0" /&gt;일시 후원하기&lt;/label&gt;&lt;/p&gt;</pre>
 
-<s>4번째 줄을 보시면, input과 문자 부분이 동시에 label 태그로 둘러싸여 있는 것을 알 수 있습니다. 간단하죠?</s>
-
-위 코드는 올바르지 않은 마크업입니다. 개발자 분들은 참고하지 마세요.
-
-올바른 마크업은 아래와 같습니다.
-
-<pre class="hljs"><code class="">&lt;input name="a" type="radio" value="support_once" id="id_name" /&gt;&lt;label for="id_name"&gt;일시 후원하기&lt;/label&gt;</code></pre>
+4번째 줄을 보시면, input과 문자 부분이 동시에 label 태그로 둘러싸여 있는 것을 알 수 있습니다. 간단하죠?
 
 위 코드와 같이 하면 텍스트를 클릭했을 때 라디오 버튼이 선택됩니다.
 
@@ -58,7 +51,7 @@ categories:
 자, 기존의 환경으로 돌아가서, 동그라미를 잘 클릭했다고 생각해봅시다. 그런데, 아무 변화가 없는 경우가 있었습니다. 왜일까요? 아래 그림을 보세요.
 
 <div class="imageblock center" style="text-align: center; clear: both;">
-  <img src="/attach/3/cfile23.uf.1262AD4A4D0847211D8A3B.png" alt="사용자 삽입 이미지" height="415" width="500" />
+  <img src="/wp-content/uploads/1/cfile23.uf.1262AD4A4D0847211D8A3B.png" alt="사용자 삽입 이미지" height="415" width="500" />
 </div>
 
 
@@ -76,7 +69,7 @@ categories:
 아래 그림은 펼쳐지는 중간에 캡쳐한 것입니다.
 
 <div class="imageblock center" style="text-align: center; clear: both;">
-  <img src="/attach/3/cfile1.uf.17652A484D0847210D4C74.png" alt="사용자 삽입 이미지" height="426" width="500" />
+  <img src="/wp-content/uploads/1/cfile1.uf.17652A484D0847210D4C74.png" alt="사용자 삽입 이미지" height="426" width="500" />
 </div>
 
 
