--- a/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
+++ b/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
@@ -17,11 +17,11 @@ tags:
   - 파비콘
   - 포토샵ico
 ---
-파이어폭스와 구글 크롬에서 레프트21의 파비콘(웹사이트 이름 옆에 뜨는 작은 아이콘. 아래 그림 같은 것을 파비콘이라고 합니다.)은 항상 나왔습니다.</p> 
+파이어폭스와 구글 크롬에서 레프트21의 파비콘(웹사이트 이름 옆에 뜨는 작은 아이콘. 아래 그림 같은 것을 파비콘이라고 합니다.)은 항상 나왔습니다.
 
 <p style="text-align: center;">
   <img src="/wp-content/uploads/1/cfile1.uf.175E1B4B4D08472F1374BC.jpg" class="aligncenter" width="325" height="87" filename="파비콘글1.jpg" filemime="image/jpeg" />
-</p></p> 
+</p> 
 
 그러나, 가장 많은 사람들이 사용하는 브라우저인 인터넷 익스플로러에서는 파비콘을 까다롭게 적용합니다.
 
