--- a/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
+++ b/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
@@ -1,6 +1,6 @@
 ---
 id: 183
-title: '구글 검색으로 &lt;레프트21> 검색하기'
+title: '구글 검색으로 <레프트21> 검색하기'
 date: 2009-12-22T14:17:55+00:00
 author: 노동자 연대 웹마스터
 layout: post
