--- a/_posts/2010-05-23-첫-화면-변경의-이유.md
+++ b/_posts/2010-05-23-첫-화면-변경의-이유.md
@@ -20,136 +20,70 @@ tags:
 ---
 &lt;레프트21> 첫 화면이 바뀌었다는 것을 눈치챈 분들 있으신가요? (설마 없지는 않겠죠? ㅠ.ㅠ)
 
-<div>
-  네, 바뀌었습니다. 바뀌었죠. 왜 바뀌었을까요?
-</div>
+네, 바뀌었습니다. 바뀌었죠. 왜 바뀌었을까요?
 
-<div>
-  답은 간단합니다. 급변하는 현실정치에 발빠르게 대응하기 위해 바뀌었습니다! ^^
-</div>
+답은 간단합니다. 급변하는 현실정치에 발빠르게 대응하기 위해 바뀌었습니다! ^^
 
-<div>
-  (바뀐 첫 화면이 어떠신지 의견을 좀 주세요. 편집자인 인식씨가 되게 궁금해 하세요. <a href="#writeComment" target="_self">댓글 쓰러 가기</a>)
-</div>
+(바뀐 첫 화면이 어떠신지 의견을 좀 주세요. 편집자인 인식씨가 되게 궁금해 하세요. <a href="#writeComment" target="_self">댓글 쓰러 가기</a>)
 
-<div>
-  ㅡㅡ;; 너무 전형적인 대답인가요. 할 수 없어요. 딱 그 때문인 걸요.
-</div>
+ㅡㅡ;; 너무 전형적인 대답인가요. 할 수 없어요. 딱 그 때문인 걸요.
 
-<div>
-  그럼, 일단 바뀌기 전의 화면을 봐 주세요.
-</div>
+그럼, 일단 바뀌기 전의 화면을 봐 주세요.
 
-<div>
-  <div>
-    <img class="aligncenter" alt="" src="/wp-content/uploads/1/cfile26.uf.1803FE544D08475A2AEA08.png" width="580" height="430" />
-  </div>
-  
-  <div>
-    안보 위기는 사기다 하는 기사가 제일 위쪽에 있습니다.
-  </div>
-  
-  <div>
-    그런데 문제가 있었습니다.
-  </div>
-  
-  <div>
-    ‘”안보 위기”는 사기다’ 다음으로 강조되는 기사가 보이시나요?
-  </div>
-  
-  <div>
-    맞습니다. “IMF 긴축에 맞선 그리스의 반란”이라는 기사입니다. 그런데 가장 강조된 기사에 비해 사이즈 차이가 너무 많이 나죠.
-  </div>
-  
-  <div>
-    관련 기사를 좀 붙여서 영역으로 치면 그래도 완전 밀리는 기세는 아닙니다만, 거의 게임이 안 될 정도로 메인 기사와 그 다음 기사의 강조 차이가 심했습니다.
-  </div>
-  
-  <div>
-    애초에 사이트를 설계할 때, 격주간이므로 신문의 변화가 적을 것이고, 따라서 오프라인 신문 1면을 흉내낸 디자인으로 가자 하고 생각했던 것이죠.(제가 설계했습니다.)
-  </div>
-  
-  <div>
-    그런데 레프트21 사이트를 운영하면서는 약간 애초에 생각했던 것과 양상이 달라졌어요. 온라인 기사의 비중이 처음에 생각했던 것보다 늘어났거든요. 레프트21 웹사이트를 많이 찾아 주신 애독자 분들의 덕택이기도 한데요, ^^ 역동적으로 변화하는 한국 사회와 세계의 정치 상황에 맞는 신속한 분석 기사들을 발빠르게 내놓는 것을 레프트21이 게을리하지 않다 보니깐 메인이 꽤 자주 교체돼야만 했던 것이죠.
-  </div>
-  
-  <div>
-    그런데, 그럴 때마다 디자이너 분과 제가 있어야만 메인화면을 교체할 수 있으니까 편집자인 인식 씨가 좀 애가 타셨던 거예요. 그래서 어느 날 저에게, 메인화면을 좀 교체하자고 제안을 하셨죠.
-  </div>
-  
-  <div>
-    저도 슬슬 그런 문제의식이 형성될랑말랑하던 찰나였기 때문에 대번에 좋다고 말하고 디자인에 착수했답니다.
-  </div>
-  
-  <div>
-    물론, 제가 디자인한 건 아니예요. ^^ 혹시 웹마스터 ‘기린’님을 기억하시나요? 돌아온 ‘기린’님이 첫 화면을 디자인해 주셨답니다. 그래서 나온 화면, 짜잔~ 아래와 같은 화면입니다.<br /> <img class="aligncenter" alt="" src="/wp-content/uploads/1/cfile3.uf.170294514D08475A2DD757.png" width="580" height="436" />
-  </div>
-</div>
+<img class="aligncenter" alt="" src="/wp-content/uploads/1/cfile26.uf.1803FE544D08475A2AEA08.png" width="580" height="430" />
 
-<div>
-  디자인 취지는 간단해요. 메인 기사를 이미지가 아닌 텍스트로 만들어서 유동성 있게 메인 기사를 교체할 수 있도록 한 것이죠.
-</div>
+안보 위기는 사기다 하는 기사가 제일 위쪽에 있습니다.
 
-<div>
-  그 다음 메인 기사와 2번째 기사 사이의 강조 차이가 너무 나지 않도록 하는 것도 있었고요. 당장 “조사단 발표는 또 다른 의혹을 낳고 있다”는 온라인 기사인데요, 메인 기사에 비해서도 그렇게 강조가 죽지 않았죠.
-</div>
+그런데 문제가 있었습니다.
 
-<div>
-  이런 화면 구성은 레프트21 사이트를 좀더 역동적으로 보이게 해 줄 것이고, 더 많은 사람들이 더 많은 기사를 볼 수 있도록 만들어 줄 것이라고 생각합니다. ^^
-</div>
+‘”안보 위기”는 사기다’ 다음으로 강조되는 기사가 보이시나요?
 
-<div>
-  (자, 여기까지 들으셨다면 바뀐 첫 화면에 대한 의견을 좀 주셔야겠죠? 한 마디 꼭 해 주세요! 인식씨가 반응을 궁금해 하세요! ㅋㅋ -> <a href="#communication" target="_self">댓글 남기러 가기</a>)
-</div>
+맞습니다. “IMF 긴축에 맞선 그리스의 반란”이라는 기사입니다. 그런데 가장 강조된 기사에 비해 사이즈 차이가 너무 많이 나죠.
+
+관련 기사를 좀 붙여서 영역으로 치면 그래도 완전 밀리는 기세는 아닙니다만, 거의 게임이 안 될 정도로 메인 기사와 그 다음 기사의 강조 차이가 심했습니다.
+
+애초에 사이트를 설계할 때, 격주간이므로 신문의 변화가 적을 것이고, 따라서 오프라인 신문 1면을 흉내낸 디자인으로 가자 하고 생각했던 것이죠.(제가 설계했습니다.)
+
+그런데 레프트21 사이트를 운영하면서는 약간 애초에 생각했던 것과 양상이 달라졌어요. 온라인 기사의 비중이 처음에 생각했던 것보다 늘어났거든요. 레프트21 웹사이트를 많이 찾아 주신 애독자 분들의 덕택이기도 한데요, ^^ 역동적으로 변화하는 한국 사회와 세계의 정치 상황에 맞는 신속한 분석 기사들을 발빠르게 내놓는 것을 레프트21이 게을리하지 않다 보니깐 메인이 꽤 자주 교체돼야만 했던 것이죠.
+
+그런데, 그럴 때마다 디자이너 분과 제가 있어야만 메인화면을 교체할 수 있으니까 편집자인 인식 씨가 좀 애가 타셨던 거예요. 그래서 어느 날 저에게, 메인화면을 좀 교체하자고 제안을 하셨죠.
+
+저도 슬슬 그런 문제의식이 형성될랑말랑하던 찰나였기 때문에 대번에 좋다고 말하고 디자인에 착수했답니다.
+
+물론, 제가 디자인한 건 아니예요. ^^ 혹시 웹마스터 ‘기린’님을 기억하시나요? 돌아온 ‘기린’님이 첫 화면을 디자인해 주셨답니다. 그래서 나온 화면, 짜잔~ 아래와 같은 화면입니다.
+
+<img class="aligncenter" alt="" src="/wp-content/uploads/1/cfile3.uf.170294514D08475A2DD757.png" width="580" height="436" />
+
+디자인 취지는 간단해요. 메인 기사를 이미지가 아닌 텍스트로 만들어서 유동성 있게 메인 기사를 교체할 수 있도록 한 것이죠.
+
+그 다음 메인 기사와 2번째 기사 사이의 강조 차이가 너무 나지 않도록 하는 것도 있었고요. 당장 “조사단 발표는 또 다른 의혹을 낳고 있다”는 온라인 기사인데요, 메인 기사에 비해서도 그렇게 강조가 죽지 않았죠.
+
+이런 화면 구성은 레프트21 사이트를 좀더 역동적으로 보이게 해 줄 것이고, 더 많은 사람들이 더 많은 기사를 볼 수 있도록 만들어 줄 것이라고 생각합니다. ^^
+
+(자, 여기까지 들으셨다면 바뀐 첫 화면에 대한 의견을 좀 주셔야겠죠? 한 마디 꼭 해 주세요! 인식씨가 반응을 궁금해 하세요! ㅋㅋ -> <a href="#communication" target="_self">댓글 남기러 가기</a>)
 
 ## 곁가지 이야기 - 조각그림이 달라졌어요.
 
-<div>
-  그리고 곁가지 이야기인데요, 기사에 붙어 있는 조각그림이 달라졌어요.
-</div>
+그리고 곁가지 이야기인데요, 기사에 붙어 있는 조각그림이 달라졌어요.
 
-<div>
-  <div style="width: 271px" class="wp-caption aligncenter">
-    <img alt="" src="/wp-content/uploads/1/cfile28.uf.19639D494D08475C201D30.png" width="261" height="69" />
-    
-    <p class="wp-caption-text">
-      △예전 조각그림입니다. 직접 손으로 잘랐어요.
-    </p>
-  </div>
-  
-  <div style="width: 437px" class="wp-caption aligncenter">
-    <img alt="" src="/wp-content/uploads/1/cfile22.uf.14288F4E4D08475B041819.png" width="427" height="211" />
-    
-    <p class="wp-caption-text">
-      △조각그림을 자동화했기 때문에 기사에 사진을 등록하기만 하면 조각그림이 나오게 됐습니다.
-    </p>
-  </div>
-</div>
+<img alt="" src="/wp-content/uploads/1/cfile28.uf.19639D494D08475C201D30.png" width="261" height="69" />
 
-<div>
-  예전에는 이미지의 일부를 직접 잘라서 조각그림<img class="txc-footnote" alt="" src="http://cfs.tistory.com/static/admin/editor/footnotes.gif" longdesc="썸네일이라고 하죠" border="0" />을 만들었답니다.
-</div>
+△예전 조각그림입니다. 직접 손으로 잘랐어요.
 
-<div>
-  그런데 이제는 이미지 전체 사이즈를 좀 줄여서 조각그림을 만들고 있어요.
-</div>
+<img alt="" src="/wp-content/uploads/1/cfile22.uf.14288F4E4D08475B041819.png" width="427" height="211" />
 
-<div>
-  어떤 차이가 있냐고요? 예전에는 수동으로 조각그림을 일일이 자르느라고 좀 고생이었다면, 이제는 조각그림 만드는 것을 자동화한 것이죠.
-</div>
+△조각그림을 자동화했기 때문에 기사에 사진을 등록하기만 하면 조각그림이 나오게 됐습니다.
 
-<div>
-  물론 편집자의 의도는 일일이 자르는 데 더 잘 들어갈 수 있다고 생각하지만, 이렇게 자동으로 축소하는 것도 그렇게 나쁘지 않은 것 같아요. ^^ 자동화할 수 있다는 것이 큰 장점이죠.
-</div>
+예전에는 이미지의 일부를 직접 잘라서 조각그림(썸네일이라고 하죠)을 만들었답니다. 
 
-<div>
-  예전에는 온라인 기사를 올리면서 조각그림을 노출하려면, 일단 이미지를 받아서, 자르고, 조각그림 후보로 등록하고, 기사에 맞는 조각그림을 등록해주는 절차가 필요했거든요. 이제는 그럴 필요가 없답니다. 블로그에 이미지를 올리는 것과 똑같이, 이미지를 업로드하기만 하면 조각그림은 알아서 생성되게 되는 것이죠.
-</div>
+그런데 이제는 이미지 전체 사이즈를 좀 줄여서 조각그림을 만들고 있어요.
 
-<div>
-  자동화의 혜택은 더 많은 사람들에게 돌아가야 한다고 생각합니다. 지루하고 단조로운 일은 기계에게 모두 맡겨 버리고 사람은 창조적인 일에 좀더 많은 시간을 써야 한다고 생각하거든요! ^^
-</div>
+어떤 차이가 있냐고요? 예전에는 수동으로 조각그림을 일일이 자르느라고 좀 고생이었다면, 이제는 조각그림 만드는 것을 자동화한 것이죠.
 
-<div>
-  그럼 이만&#8230;
-</div>
+물론 편집자의 의도는 일일이 자르는 데 더 잘 들어갈 수 있다고 생각하지만, 이렇게 자동으로 축소하는 것도 그렇게 나쁘지 않은 것 같아요. ^^ 자동화할 수 있다는 것이 큰 장점이죠.
+
+예전에는 온라인 기사를 올리면서 조각그림을 노출하려면, 일단 이미지를 받아서, 자르고, 조각그림 후보로 등록하고, 기사에 맞는 조각그림을 등록해주는 절차가 필요했거든요. 이제는 그럴 필요가 없답니다. 블로그에 이미지를 올리는 것과 똑같이, 이미지를 업로드하기만 하면 조각그림은 알아서 생성되게 되는 것이죠.
+
+자동화의 혜택은 더 많은 사람들에게 돌아가야 한다고 생각합니다. 지루하고 단조로운 일은 기계에게 모두 맡겨 버리고 사람은 창조적인 일에 좀더 많은 시간을 써야 한다고 생각하거든요! ^^
+
+그럼 이만&#8230;
