--- a/_posts/2010-10-01-레프트21-모바일-테스트-페이지.md
+++ b/_posts/2010-10-01-레프트21-모바일-테스트-페이지.md
@@ -28,9 +28,7 @@ tags:
 
 그리고 오늘 또 좀 짬이 나서 모바일 페이지를 좀 건드려 봤습니다. 그리고 관심 있는 분들은 사용해 볼 만한 수준이 됐다고 생각해서 웹마스터 블로그 방문자들에게만 공개를 하기로 했습니다.
 
-<p style="text-align: center;">
-  <span class="Apple-style-span" style="font-size: xx-large;"><b><a href="http://m.left21.com/" target="_blank">레프트21 모바일 페이지 가기</a></b></span>
-</p>
+(이젠 모바일 페이지가 따로 필요 없죠... 링크는 제거했습니다.)
 
 전체적으로 공개하려면 이것보다 훨씬 더 다듬어야 하니까 걱정하지 마세요 ㅋ
 
@@ -120,8 +118,3 @@ tags:
 
 : <a href="http://wspaper.org/B_support.php?from=webmasterBlog" target="_blank">후원하러 가기</a>
 
-그리고 위로 돌아가기 귀찮은 분들을 위해 모바일 사이트 바로 가기 링크을 다시 드리도록 하죠.
-
-<p style="text-align: center;">
-  <span class="Apple-style-span" style="font-size: xx-large;"><a href="http://m.left21.com/" target="_blank">레프트21 모바일 바로 가기</a></span>
-</p>
