--- a/_posts/2011-02-17-툴팁-반응속도개선-―-반응속도를-예전으로-되돌린.md
+++ b/_posts/2011-02-17-툴팁-반응속도개선-―-반응속도를-예전으로-되돌린.md
@@ -25,7 +25,7 @@ tags:
   </p>
 </div>
 
-링크에 마우스를 올렸을 때 자막처럼 나오는 박스를 툴팁이라고 합니다. 이것의 반응속도에 대한 이야기를 하려고 합니다. 예전에 <a href="http://wspaper.org/" target="_blank" title="[http://wspaper.org/]로 이동합니다.">&lt;레프트21></a>에서 툴팁 반응속도를 빠르게 개선한 적이 있었습니다.(<a href="/entry/%EB%A7%81%ED%81%AC-%EC%84%A4%EB%AA%85%ED%88%B4%ED%8C%81%EC%9D%84-%EC%A0%9C%EA%B9%8D%EC%A0%9C%EA%B9%8D-%EB%9C%A8%EA%B2%8C-%EB%A7%8C%EB%93%A4%EB%8B%A4" target="_blank" title="[/entry/%EB%A7%81%ED%81%AC-%EC%84%A4%EB%AA%85%ED%88%B4%ED%8C%81%EC%9D%84-%EC%A0%9C%EA%B9%8D%EC%A0%9C%EA%B9%8D-%EB%9C%A8%EA%B2%8C-%EB%A7%8C%EB%93%A4%EB%8B%A4]로 이동합니다.">“링크설명(툴팁)을 제깍제깍뜨게 만들다”</a>)</p> 
+링크에 마우스를 올렸을 때 자막처럼 나오는 박스를 툴팁이라고 합니다. 이것의 반응속도에 대한 이야기를 하려고 합니다. 예전에 <a href="http://wspaper.org/" target="_blank" title="[http://wspaper.org/]로 이동합니다.">&lt;레프트21></a>에서 툴팁 반응속도를 빠르게 개선한 적이 있었습니다.(<a href="/entry/%EB%A7%81%ED%81%AC-%EC%84%A4%EB%AA%85%ED%88%B4%ED%8C%81%EC%9D%84-%EC%A0%9C%EA%B9%8D%EC%A0%9C%EA%B9%8D-%EB%9C%A8%EA%B2%8C-%EB%A7%8C%EB%93%A4%EB%8B%A4" target="_blank" title="[/entry/%EB%A7%81%ED%81%AC-%EC%84%A4%EB%AA%85%ED%88%B4%ED%8C%81%EC%9D%84-%EC%A0%9C%EA%B9%8D%EC%A0%9C%EA%B9%8D-%EB%9C%A8%EA%B2%8C-%EB%A7%8C%EB%93%A4%EB%8B%A4]로 이동합니다.">“링크설명(툴팁)을 제깍제깍뜨게 만들다”</a>)
 
 그러나 항상 빠른게 좋은 것은 아닙니다. 웹 사용성의 대가 제이콥 닐슨은 [<sup>1</sup>](#note-275-1 "드롭다운 메뉴는 메뉴바에 마우스를 올렸을 때 쭉 밑으로 하위메뉴가 흘러나오도록 구성된 메뉴를 말합니다.")드롭다운 메뉴의 반응속도에 관해 다음과 같이 말했습니다.
 
