--- a/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
+++ b/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
@@ -21,7 +21,7 @@ categories:
 > 
 > “그러한 사용성 문제는 시각적 차이가 없는 경우 클릭한 것을 종종 기억하지 못하게 되는, 단기 기억력이 약한 사용자일 경우 상황은 더 악화된다. 물론 모든 인간은 정도의 차이는 있지만 어느 정도는 단기 기억력 문제를 갖고 있고 따라서 모든 사용자들은 링크 색상 변경으로 만족감을 얻는다. 확실히 이 부분은 대다수 사람들보다는 특정 소수 계층에 영향을 미치기 때문에, 예를 들어 나이 많은 사용자가 많은 사이트라면 링크 색상을 변경하는 것이 특히 중요하다.”
 > 
-> ㅡ 웹 사용성 중심의 웹 사이트 제작론, 61p</p> 
+> ㅡ 웹 사용성 중심의 웹 사이트 제작론, 61p
 
 어익후! &lt;레프트21>은 이미 방문한 링크를 표시해 주는 기능이 없었습니다. &lt;레프트21> 웹사이트가 생긴 지 2년이 됐지만 그런 걸 고려한 적이 없었죠.
 
