--- a/_posts/2013-03-07-검색-기능이-개선됐습니다.md
+++ b/_posts/2013-03-07-검색-기능이-개선됐습니다.md
@@ -78,7 +78,7 @@ categories:
 
 #### 날짜 입력 방법2: 자동 입력
 
-입력란 오른쪽에 있는(좁은 화면의 경우 아래에) 버튼을 누르면, 버튼에 적힌 기간에 따라 입력란이 자동으로 채워집니다.</p> 
+입력란 오른쪽에 있는(좁은 화면의 경우 아래에) 버튼을 누르면, 버튼에 적힌 기간에 따라 입력란이 자동으로 채워집니다
 
 <p style="text-align: center; clear: none; float: none;">
   <img src="/wp-content/uploads/1/cfile24.uf.157BEC4951382CFB30C97D.jpg" class="aligncenter" width="588" height="184" filename="apiSearch-byDate-auto-example.jpg" filemime="image/jpeg" />
